<resources>
    <string name="app_name">YTUDAK Malzeme</string>
    <string name="zimmetle">Zimmetle</string>
    <string name="gelen_text">Malzemeci ismi</string>
    <string name="malzeme_arama">MALZEME ARAMA</string>
    <string name="ara">ARA!</string>
    <string name="search_button">ARA</string>
    <string name="onay">onay</string>
    <string name="mno">mno</string>
    <string name="model">model</string>
    <string name="not">not</string>
    <string name="teslim_eden">teslim eden</string>
    <string name="teslimalan">teslimalan</string>
    <string name="onayla">Onayla</string>
    <string name="malzemeci">Malzemeci</string>
    <string name="zVer_before_res"> MNO  | KATEGORİ |  MODEL | NOT</string>
    <string name="zVer_after_res">Durum     | KATEGORİ  |   MODEL |  MALZEMECİ  |  ALAN KİŞİ  </string>
    <string name="onay_not">NOT</string>
    <string name="malzemenin_zimmetli_oldugu_kisi_ismi">malzemenin zimmetli oldugu kisi ismi</string>
    <string name="isim">isim</string>
    <string name="kategori">kategori</string>
    <string name="tarih">tarih</string>
    <string name="zimmetleme_notu">zimmetleme notu</string>
    <string name="malzemeci_no">malzemeci no</string>
    <string-array name="malzemeci">
        <item>Malzemeci1</item>
        <item>Malzemeci2</item>
        <item>Malzemeci3</item>
    </string-array>
    <string-array name="kategori">
        <item>Tam İp</item>
        <item>Yarim ip</item>
        <item>Top Rope</item>
        <item>İp Çantası</item>
        <item>Kemer</item>
        <item>Kask</item>
        <item>Emniyet Aleti</item>
        <item>Ocak</item>
        <item>Kış emniyet</item>
        <item>Emniyet Aletleri</item>
        <item>Çekiç</item>
        <item>Cam</item>
        <item>Takoz</item>
        <item>Nutkey</item>
        <item>Sikke</item>
        <item>Karabina</item>
        <item>Free Karabina</item>
        <item>Hegza</item>
        <item>Perlon</item>
        <item>Kazma</item>
        <item>Krampon</item>
        <item>Aksesuar</item>
        <item>Giyim</item>
        <item>Tulum</item>
        <item>Mat</item>
        <item>Çanta</item>
        <item>Çadır</item>
        <item>Bivak</item>
        <item>Elektroinik</item>
        <item>Sağlık</item>
    </string-array>


</resources>
