<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"

    >
    <TextView
        android:id="@+id/zal_adi"
        android:text="@string/isim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/zal_kategori"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/zal_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/kategori"
        app:layout_constraintLeft_toRightOf="@id/zal_adi"
        app:layout_constraintRight_toRightOf="@id/zal_model"
        app:layout_constraintStart_toEndOf="@+id/zal_adi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zal_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/zal_kategori"
        app:layout_constraintLeft_toRightOf="@id/zal_kategori"
        app:layout_constraintRight_toLeftOf="@id/zal_malzemencino"
        />
    <TextView
        android:id="@+id/zal_malzemencino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/malzemeci_no"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/zal_model"
        app:layout_constraintLeft_toRightOf="@id/zal_kategori"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/zal_tarih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tarih"
        app:layout_constraintTop_toBottomOf="@id/zal_adi"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/zal_zimmet_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zimmetleme_notu"
        android:padding="16dp"
        app:layout_constraintLeft_toRightOf="@id/zal_tarih"
        app:layout_constraintTop_toBottomOf="@id/zal_adi"
        />
    <TextView
        android:id="@+id/zal_zimmet_mno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mno"
        android:padding="16dp"
        app:layout_constraintLeft_toRightOf="@id/zal_zimmet_not"
        app:layout_constraintTop_toBottomOf="@id/zal_adi"
        />


</androidx.constraintlayout.widget.ConstraintLayout>