<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"

    >
    <TextView
        android:id="@+id/mNoZimmetVerTV"
        android:text="@string/mno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/zVerilenModelTV"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/zVerilenModelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/model"
        app:layout_constraintLeft_toRightOf="@id/mNoZimmetVerTV"
        app:layout_constraintRight_toRightOf="@id/zVerilenNotTV"
        app:layout_constraintStart_toEndOf="@+id/mNoZimmetVerTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zVerilenNotTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/zVerilenModelTV"
        app:layout_constraintLeft_toRightOf="@id/zVerilenModelTV"
        app:layout_constraintRight_toRightOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>