<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activty.ZimmetAlOnayActivity">

    <ListView
        android:id="@+id/zimmetal_secilen_listview"
        android:layout_width="389dp"
        android:layout_height="392dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zimmetal_buton_onay"
        android:layout_width="145dp"
        android:layout_height="75dp"
        android:layout_marginTop="532dp"
        android:text="@string/onayla"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/zimmetal_spinner"
        android:layout_width="198dp"
        android:layout_height="47dp"
        android:layout_marginTop="444dp"
        android:ems="10"
        android:hint="@string/teslimalan"
        android:entries="@array/malzemeci"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:layout_marginTop="444dp"
        android:text="@string/malzemeci"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>